--- a/public/index.html
+++ b/public/index.html
@@ -6461,7 +6461,19 @@ function fixCarouselNavPositioning(swiper) {
 
     </script>
     <script type="application/javascript">
+      $(document).ready(function() {
 
+$(document).on('change', '[name=sponsor-mca]', function() {
+    var optionSelected = $('[name=sponsor-mca]:checked');
+    var sponsorYesContainer = $('.sponsor-yes-container');
+
+    if (optionSelected.val() === 'Yes') {
+        sponsorYesContainer.slideDown(300);
+    } else {
+        sponsorYesContainer.slideUp(300);
+    }
+});
+});
         </script>
   </body>
   </html>
