--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,10 @@
    
     
     <style type="text/css">
-      .hero-banner-carousel .swiper-container .swiper-button-prev,
-.hero-banner-carousel .swiper-container .swiper-button-next {
-  background-color: #129ac8;
-  width: 75px;
-  height: 150px;
-  margin: 0;
-  transform: translateY(-50%);
-}
+      .form-control, .btn{
+        min-height:24px !important;
+      }
+      
       .side-menu-content{
         text-align:left;
       }
